--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,35 @@
     tools:context="com.londonappbrewery.iampoor.MainActivity">
 
     <TextView
-            android:text="@string/title"
+            android:id="@+id/text_i_am"
+            android:text="@string/title1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:textColor="@android:color/black"
-            android:layout_centerHorizontal="true"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="40sp"
-            android:textStyle="bold"/>
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="105dp"
+            android:layout_marginLeft="105dp"/>
+    <TextView
+            android:id="@+id/text_poor"
+            android:text="@string/title2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_toEndOf="@+id/text_i_am"
+            android:layout_toRightOf="@+id/text_i_am"/>
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/coal"
             android:id="@+id/imageView"
-            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
             android:contentDescription="@string/image_view_content_description"/>
+
 </RelativeLayout>
